--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://clarazeng.com/"
+baseURL: "http://clarazeng.com/"
 languageCode: "en-us"
 title: "Clara Zeng"
 theme: hugo-profile
