--- a/hugo.yaml
+++ b/hugo.yaml
@@ -77,7 +77,7 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.jpg"
+    image: "/images/me.png"
     content: |-
       I'm an early-career Data Scientist and AI Engineer with a strong foundation in machine learning, natural language processing, and full-stack development. I recently graduated from USC with a degree in Computer Science and Applied Mathematics (GPA: 3.94/4.0), and I'm currently pursuing my Master's in Analytics at UC Berkeley.
 
