--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,13 @@ languageCode: "en-us"
 title: "Clara Zeng"
 theme: hugo-profile
 
+menu:
+  main:
+    - identifier: resume
+      name: Resume
+      url: /resume/
+      weight: 50
+      
 outputs:
   home:
     - "HTML"
